--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 50e36cd
+	base = 119a807
 	trimbase = 
 	parent = release/kinetic/uwb_hardware_driver
-	previous = 
+	previous = 50e36cd
