--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fd69719
+	base = 4264151
 	trimbase = 
 	parent = debian/kinetic/uwb_hardware_driver
-	previous = 
+	previous = fd69719
