--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>uwb_hardware_driver</name>
-  <version>0.1.0</version>
+  <version>0.1.2</version>
   <description>The uwb_hardware_driver package</description>
 
   <maintainer email="elcin.erdogan@inovasyonmuhendislik.com">Elcin Erdogan</maintainer>
@@ -20,6 +20,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>libjsoncpp-dev</build_depend>
 
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
@@ -30,6 +31,7 @@
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>message_runtime</exec_depend>
+  <exec_depend>libjsoncpp</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
