Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.1.0": ["Elcin Erdogan", "elcin.erdogan@inovasyonmuhendislik.com"]}
+{"0.1.0": ["Elcin Erdogan", "elcin.erdogan@inovasyonmuhendislik.com"], "0.1.1": ["Elcin Erdogan", "elcin.erdogan@inovasyonmuhendislik.com"], "0.1.2": ["Elcin Erdogan", "elcin.erdogan@inovasyonmuhendislik.com"]}
